#77 Added indexes, Adjusted service